# tree-of-science

./: README.md
pipeline/: pyproject.toml
pipeline/src/pipeline/: cli.py  embeddings.py  schemas.py  utils.py
pipeline/src/pipeline/db/: crud.py  database.py  models.py
